--- a/package.json
+++ b/package.json
@@ -3,23 +3,22 @@
   "version": "1.0.0",
   "description": "casual without compromise",
   "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --exec babel-node ./src/index.js"
+  },
   "dependencies": {
-    "body-parser": "1.18.2",
-    "express": "4.16.3",
-    "graphql": "0.13.2",
-    "graphql-server-express": "1.3.2",
-    "graphql-tools": "2.23.1",
-    "pg": "7.4.1",
-    "pg-hstore": "2.3.2",
-    "sequelize": "4.37.4"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0",
+    "pg": "^7.4.1",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.37.4"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "nodemon": "1.17.2"
-  },
-  "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "nodemon": "^1.17.2",
+    "sequelize-cli": "^4.0.0"
   }
 }
