--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,22 @@
 .DS_Store
-node_modules/
-/dist/
-yarn-debug.log*
-yarn-error.log*
 .idea
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Django stuff:
+*.log
+
+# pyenv
+.python-version
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
