--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ django-braces==1.12.0
 django-oauth-toolkit==1.0.0
 django-rest-framework-social-oauth2==1.1.0
 djangorestframework==3.7.7
+djangorestframework-gis==0.12
+dry-rest-permissions==0.1.10
 idna==2.6
 oauthlib==2.0.7
 pbr==3.1.1
