--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,4 +1,3 @@
-awsebcli==3.12.4
 blessed==1.14.2
 botocore==1.10.2
 cement==2.8.2
@@ -27,7 +26,7 @@ python-dateutil==2.6.1
 python3-openid==3.1.0
 pytz==2018.3
 PyYAML==3.12
-requests==2.9.1
+requests==2.13.0
 requests-oauthlib==0.8.0
 semantic-version==2.5.0
 six==1.11.0
@@ -37,6 +36,7 @@ stevedore==1.27.1
 tabulate==0.7.5
 termcolor==1.1.0
 urllib3==1.22
+uWSGI==2.0.17
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.7.2
