--- a/django/uwsgi.ini
+++ b/django/uwsgi.ini
@@ -6,5 +6,9 @@ master = true
 processes = 5
 
 socket = %(project).sock
-chmod-socket = 664
+chown-socket=www-data:www-data
+chmod-socket = 666
+uid = www-data
+gid = www-data
+
 vacuum = true
