--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,15 @@ http {
 	types_hash_max_size 2048;
 
 	##
+	# SSL Settings
+	##
+
+    ssl_certificate             /etc/nginx/certs/vodkasoda.crt;
+    ssl_certificate_key         /etc/nginx/certs/vodkasoda.key;
+	ssl_protocols               TLSv1 TLSv1.1 TLSv1.2;
+	ssl_prefer_server_ciphers   on;
+
+	##
 	# Logging Settings
 	##
 
@@ -27,9 +36,8 @@ http {
 	# Gzip Settings
 	##
 
-	gzip            on;
-	gzip_disable    "msie6";
-
+	gzip                on;
+	gzip_disable        "msie6";
 	gzip_vary           on;
 	gzip_proxied        any;
 	gzip_comp_level     6;
